# shell-core

./: Cargo.toml  README.md  file.txt  hist.txt
src/: built_in_cmds.rs  lib.rs  main.rs  parser.rs  parser2.rs  redirect.rs  structs.rs  utils.rs
src/cmd/: built_in_cmds.rs  mod.rs  run.rs  utils.rs
