[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
nix = { version = "0.30.1", features = ["process"] }
anyhow = "1.0.68"                                    # error handling
bytes = "1.3.0"                                      # helps manage buffers
thiserror = "1.0.38"                                 # error handling
libc = "0.2.177"
